--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,4 @@
 .pioenvs
 .piolibdeps
 .vscode/ipch
-.vscode/.BROWSE.C_CPP.DB
-.vscode/.BROWSE.C_CPP.DB-shm
-.vscode/.BROWSE.C_CPP.DB-wal
+.vscode/.browse.c_cpp.db*
